src/z80asm/z80asm2/t/45-symbols/expected/decl_matrix_7B.txt
% z88dk-z80asm -v -dump-after-symbol-collection t/45-symbols//input/decl_matrix_7B.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/45-symbols/input/decl_matrix_7B.asm...
t/45-symbols/input/decl_matrix_7B.asm:4:1: error: Duplicate definition: x
    x:  nop
    ^
t/45-symbols/input/decl_matrix_7B.asm:2:1: note: Previous definition
    x:  nop
    ^
Assembly completed with 1 error
